Object edit cage disappears whenever the deformed object is out of view area #65893

Closed
opened 2019-06-17 20:56:09 +02:00 by Artem · 9 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01

Blender Version
Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-16 23:08, hash: 12da679fa0
Worked: (optional)

Short description of error
Low-poly edit cage for objects with deformation modifiers (curve, for example, which changes the location of the object) disappears if you move your view away from the deformed object.

Exact steps for others to reproduce the error
Load this sample file, enter edit mode on the cube and pan your view away from final mesh (when deformed mesh is out of your view, the edit cage disappears from the viewport). If you move the object in edit mode, it will come back once the final mesh is back in view.

sample.blend

**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.01 **Blender Version** Broken: version: 2.80 (sub 74), branch: blender2.7, commit date: 2019-06-16 23:08, hash: `12da679fa0` Worked: (optional) **Short description of error** Low-poly edit cage for objects with deformation modifiers (curve, for example, which changes the location of the object) disappears if you move your view away from the deformed object. **Exact steps for others to reproduce the error** Load this sample file, enter edit mode on the cube and pan your view away from final mesh (when deformed mesh is out of your view, the edit cage disappears from the viewport). If you move the object in edit mode, it will come back once the final mesh is back in view. [sample.blend](https://archive.blender.org/developer/F7107430/sample.blend)
Author

Added subscriber: @Hickz

Added subscriber: @Hickz

Added subscribers: @brecht, @ZedDB

Added subscribers: @brecht, @ZedDB
Brecht Van Lommel was assigned by Sebastian Parborg 2019-06-21 11:12:21 +02:00

@brecht bug or not?

@brecht bug or not?
Brecht Van Lommel removed their assignment 2019-06-21 11:41:47 +02:00
Jeroen Bakker was assigned by Brecht Van Lommel 2019-06-21 11:41:47 +02:00

Looks like a clipping bug to me.

Looks like a clipping bug to me.

This issue was referenced by 0f983e8540

This issue was referenced by 0f983e8540529025d27fd9197f3d6e95ed476d3d
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Good time of day, @Jeroen-Bakker!
This bug is still persistent for curves in edit mode with same conditions, but it is indeed fixed for meshes. Maybe it's gonna be as easy for curves to fix?

Good time of day, @Jeroen-Bakker! This bug is still persistent for curves in edit mode with same conditions, but it is indeed fixed for meshes. Maybe it's gonna be as easy for curves to fix?
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

@Hickz : posted fix for the curve in editmode culling D5748: Fix #69687: Edit Curve culling

@Hickz : posted fix for the curve in editmode culling [D5748: Fix #69687: Edit Curve culling](https://archive.blender.org/developer/D5748)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65893
No description provided.